--- a/ConsoleAlgorithm/ConsoleAlgorithm.vcxproj.filters
+++ b/ConsoleAlgorithm/ConsoleAlgorithm.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="ConsoleAlgorithm.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ConsoleAlgorithm1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
