--- a/ConsoleAlgorithm/ConsoleAlgorithm.vcxproj.filters
+++ b/ConsoleAlgorithm/ConsoleAlgorithm.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="ConsoleAlgorithm1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ConsoleAlgorithm2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
