--- a/ConsoleAlgorithm/ConsoleAlgorithm.vcxproj.filters
+++ b/ConsoleAlgorithm/ConsoleAlgorithm.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="IntQueueTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ConsoleAlgorithm5.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IntStack.h">
