--- a/ConsoleAlgorithm/ConsoleAlgorithm.vcxproj.filters
+++ b/ConsoleAlgorithm/ConsoleAlgorithm.vcxproj.filters
@@ -45,6 +45,12 @@
     <ClCompile Include="ConsoleAlgorithm8.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ConsoleAlgorithm9.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="LinkedLIst.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IntStack.h">
@@ -54,6 +60,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="StopWatch.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LinkedLIst.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
